@@ -1,5 +1,8 @@
 2011-02-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
+	* soap-inspect.el: fixes suggested by `checkdoc', added Commentary
+	sections
+
 	* soap-client.el (*soap-current-wsdl*): renamed from
 	`*current-wsdl*'
 	(soap-invoke): changed url-package-name to "soap-client.el"
